--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1215,15 +1215,16 @@ div.newsfeed ol li div a, div.newsfeed ol li div ol li a {
 	font-weight: normal;
 }
 span.feed-link, h5.feed-link {
-	font-size:1em;
+	font-size: 1em;
+	line-height: 1.7;
 	font-weight: normal;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: left;
 	padding-left: 3px;
-	margin-top:4px;
+	margin-top: 4px;
 	background: none;
 	border-radius: none;
-	text-transform:none;
+	text-transform: none;
 	letter-spacing: 1px;
 }
 .moduletable_menu li.newsfeed-item {
