shop reg form styles

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1717,7 +1717,7 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 #checkout a img {
 	margin-bottom: 0;
 }
-table.jshop {
+#comjshop form {
 	width: 600px;
 }
 .cart .quantity .data {
