cart needs to be front layer

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1719,6 +1719,8 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 }
 #comjshop form {
 	width: 600px;
+	position: relative;
+	z-index: 100;
 }
 .cart .quantity .data {
 	width: 90px;
